	where exmpp_xml:get_attribute_from_list/3 was called with only 2
	arguments; this code has not been updated when exmpp_xml's API
	changed...

	* src/mod_disco.erl: Remove compatilibity code.

	* src/ejabberd_c2s.erl: When the status is not specified in a presence
	stanza, default to an empty binary, not an empty string; this is what
	mod_last expects.

2008-09-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/jlib.erl (timestamp_to_xml): Create an #xmlel element, not an
	old #xmlelement.

	* src/mod_offline.erl: Remove any compatibility code: the core of
	Ejabberd expects new structures. Add table conversion. Add try/catch
	block around exmpp_stringprep:*prep/1 uses.

2008-09-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_vcard.erl (process_sm_iq): Fix a bug where a badmatch
	exception was raised when the user didn't have a vCard.
	(remove_user): Fix a bug where the exmpp_jid module was use instead of
	exmpp_stringprep.

	* src/ejabberd_auth_odbc.erl (check_password), src/mod_roster.erl
	(remove_user): Fix a typo in the exmpp_stringprep module name.

	* src/ejabberd_c2s.erl: Fix a misuse of exmpp_stanza:error/2: the
	namespace argument (the first one) was missing.
	(process_privacy_iq): Fix a bug where the #iq record was not converted
	back to an #xmlel before calling ejabberd_router:route/3.

	* src/mod_register.erl: Convert to exmpp.

2008-09-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_vcard.erl (get_sm_features): Remove unappropriate
	comments.
	(do_route): Use the '_s' variants of NS_* macros instead of a call to
	atom_to_list/1.
	(filter_fields): A call to the stringprep module was left.

	* src/mod_vcard_ldap.erl, src/mod_vcard_odbc.erl: Convert to exmpp.

2008-09-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_roster_odbc.erl: Convert to exmpp.

	* src/mod_roster.erl (get_in_pending_subscriptions): Fix a bug where
	the type of the presence stanza was lost.